--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: trusty
 sudo: required
 env:
   global:
@@ -6,207 +7,34 @@ env:
     - FF_LEGACY_BINARY=/usr/local/bin/firefox
 matrix:
   include:
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=build
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=//javascript/atoms:atoms
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=//javascript/webdriver:all_js
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=//javascript/ie-driver:atoms
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=//javascript/chrome-driver:atoms
-    - language: java
-      jdk: oraclejdk8
-      env: TASK="//javascript/android-atoms:atoms ios_driver"
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=//java/client/test/org/openqa/selenium/atoms:test:run
-    - language: java
-      jdk: oraclejdk8
-      env: CHROME=1 TASK="calcdeps //javascript/atoms:atoms-chrome:run"
-    - language: java
-      jdk: oraclejdk8
-      env: CHROME=1 TASK="calcdeps //javascript/webdriver:webdriver-chrome:run"
-    - language: java
-      jdk: oraclejdk8
-      env: CHROME=1 TASK="calcdeps //javascript/selenium-atoms:selenium-atoms-chrome:run"
-    - language: java
-      jdk: oraclejdk8
-      env: CHROME=1 TASK="calcdeps //javascript/selenium-core:selenium-core-chrome:run"
-    - language: java
-      jdk: oraclejdk8
-      env: TASK="calcdeps //javascript/atoms:atoms-firefox:run"
-      addons:
-        firefox: latest-esr
-    - language: java
-      jdk: oraclejdk8
-      env: TASK="calcdeps //javascript/webdriver:webdriver-firefox:run"
-      addons:
-        firefox: latest-esr
-    - language: java
-      jdk: oraclejdk8
-      env: TASK="calcdeps //javascript/selenium-atoms:selenium-atoms-firefox:run"
-      addons:
-        firefox: latest-esr
-    - language: java
-      jdk: oraclejdk8
-      env: TASK="calcdeps //javascript/selenium-core:selenium-core-firefox:run"
-      addons:
-        firefox: latest-esr
-    - language: java
-      jdk: oraclejdk8
-      env: CHROME=1 TASK=test_chrome
-    - language: java
-      jdk: oraclejdk8
-      env: CHROME=1 TASK=//java/client/test/com/thoughtworks/selenium:chrome-rc-test:run
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=test_firefox
-      addons:
-        firefox: latest-esr
-    - language: java
-      jdk: oraclejdk8
-      env: MARIONETTE=1 TASK=//java/client/test/org/openqa/selenium/firefox:marionette:run
-      addons:
-        firefox: latest
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=//java/client/test/com/thoughtworks/selenium:firefox-rc-test:run
-      addons:
-        firefox: latest
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=test_java_small_tests
-    - language: java
-      jdk: oraclejdk8
-      env: CHROME=1 TASK=test_grid
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=test_htmlunit
-    - language: java
-      jdk: oraclejdk8
-      env: TASK=javadocs
     - language: python
       python: 2.7
-      env: TOXENV=flake8
-    - language: python
-      python: 2.7
-      env: TOXENV=docs
-    - language: python
-      python: 2.7
-      env: CHROME=1 TOXENV=py27-chrome
-    - language: python
-      python: 2.7
-      env: TOXENV=py27-firefox
+      env: CHROME=1 TOXENV=py27-chrome --trace
       addons:
-        firefox: latest-esr
-    - language: python
-      python: 2.7
-      env: MARIONETTE=1 TOXENV=py27-marionette
-      addons:
-        firefox: latest
-    - language: python
-      python: 2.7
-      env: PHANTOMJS=1 TOXENV=py27-phantomjs
-    - language: python
-      python: 2.7
-      env: TOXENV=py27-remote
-      addons:
-        firefox: latest
-    - language: python
-      python: 3.6
-      env: TOXENV=flake8
-    - language: python
-      python: 3.6
-      env: TOXENV=docs
-    - language: python
-      python: 3.6
-      env: CHROME=1 TOXENV=py36-chrome
-    - language: python
-      python: 3.6
-      env: TOXENV=py36-firefox
-      addons:
-        firefox: latest-esr
-    - language: python
-      python: 3.6
-      env: MARIONETTE=1 TOXENV=py36-marionette
-      addons:
-        firefox: latest
-    - language: python
-      python: 3.6
-      env: PHANTOMJS=1 TOXENV=py36-phantomjs
-    - language: python
-      python: 3.6
-      env: TOXENV=py36-remote
-      addons:
-        firefox: latest
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: TASK=//rb:unit-test
+        apt:
+          packages:
+            - google-chrome-stable
     - language: ruby
       rvm: 2.3.3
       jdk: oraclejdk8
       env: CHROME=1 TASK=//rb:chrome-test
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: MARIONETTE=1 TASK=//rb:firefox-test
       addons:
-        firefox: latest-nightly
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: TASK=//rb:ff-legacy-test
-      addons:
-        firefox: latest-esr
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: PHANTOMJS=1 TASK=//rb:phantomjs-test
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: CHROME=1 TASK=//rb:remote-chrome-test
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: MARIONETTE=1 TASK=//rb:remote-firefox-test
-      addons:
-        firefox: latest-nightly
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: TASK=//rb:remote-ff-legacy-test
-      addons:
-        firefox: latest-esr
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: PHANTOMJS=1 TASK=//rb:remote-phantomjs-test
-    - language: ruby
-      rvm: 2.3.3
-      jdk: oraclejdk8
-      env: TASK=//rb:docs
+        apt:
+          packages:
+            - google-chrome-stable
   fast_finish: true
-  allow_failures:
-    - env: TASK="calcdeps //javascript/webdriver:webdriver-firefox:run"
-    - env: CHROME=1 TASK=//java/client/test/com/thoughtworks/selenium:chrome-rc-test:run
-    - env: TASK=//java/client/test/com/thoughtworks/selenium:firefox-rc-test:run
-    - env: TOXENV=py27-firefox
-    - env: MARIONETTE=1 TOXENV=py27-marionette
-    - env: TOXENV=py27-remote
-    - env: TOXENV=py36-firefox
-    - env: MARIONETTE=1 TOXENV=py36-marionette
-    - env: TOXENV=py36-remote
-    - env: PHANTOMJS=1 TASK=//rb:remote-phantomjs-test
-    - env: TASK=//rb:docs
+  # allow_failures:
+  #   - env: TASK="calcdeps //javascript/webdriver:webdriver-firefox:run"
+  #   - env: CHROME=1 TASK=//java/client/test/com/thoughtworks/selenium:chrome-rc-test:run
+  #   - env: TASK=//java/client/test/com/thoughtworks/selenium:firefox-rc-test:run
+  #   - env: TOXENV=py27-firefox
+  #   - env: MARIONETTE=1 TOXENV=py27-marionette
+  #   - env: TOXENV=py27-remote
+  #   - env: TOXENV=py36-firefox
+  #   - env: MARIONETTE=1 TOXENV=py36-marionette
+  #   - env: TOXENV=py36-remote
+  #   - env: PHANTOMJS=1 TASK=//rb:remote-phantomjs-test
+  #   - env: TASK=//rb:docs
 before_install: ./scripts/travis/before_install.sh
 install: ./scripts/travis/install.sh
 before_script: ./scripts/travis/before_script.sh
