--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py{27,35}-{chrome,edge,firefox,ie,phantomjs,remote,safari}, docs, flak
 [testenv]
 passenv = DISPLAY PYTEST_ADDOPTS
 commands =
-  py{27,35}-chrome: py.test -n=auto --driver=Chrome {posargs}
+  py{27,35}-chrome: py.test -v -n=auto --driver=Chrome {posargs}
   py{27,35}-edge: py.test --driver=Edge {posargs}
   py{27,35}-firefox: py.test -n=auto --driver=Firefox {posargs}
   py{27,35}-ie: py.test --driver=Ie {posargs}
