use jdk_switcher to use oraclejdk8 without installing
Signed-off-by: Lucas Tierney <lucast1533@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ _bindings:
   python: &python
     language: python
     python: "2.7"
+    before_install: jdk_switcher use oraclejdk8
   ruby: &ruby
     language: ruby
     rvm: 2.0.0-p648
